Fix spacing on mobile

--- a/static/freeman.css
+++ b/static/freeman.css
@@ -73,7 +73,8 @@ footer p {
 
 .services-title {
 	font-weight: 500;
-	margin: 8px 12px;
+	margin: 0;
+	padding: 8px 12px;
 }
 
 a {
@@ -106,7 +107,7 @@ noscript {
 	float: left;
 }
 
-.services:last-child {
+.services + .services {
 	float: right;
 }
 
@@ -284,11 +285,16 @@ noscript {
 	}
 	
 	.pull-right,
-	.services {
+	.services,
+	.services + .services {
 		float: none;
 		width: 100%;
 	}
 	
+	.services + .services {
+		margin-top: 1em;
+	}
+
 	header,
 	.pull-right {
 		text-align: center;
